# solgard-bot-last-refactoring

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
app/: main.py  main_2.py  main_slash_learn.py  main_slash_test.py
app/adapters/: date_time_fonctions.py  jsonreader.py  kuhn_munkres.py  print_assign_clash.py  string_assign_clash.py
app/adapters/interpolate_powers/: data_set.csv  data_set_brut.csv  extract_data.py  linear_regretion.py  multi_regressor.py  polynomial.py
app/adapters/traductor/: de.json  en.json  es.json  fr.json  it.json  ru.json  translation.py  zh.json
app/core/entrypoint/: connect.exemple.json  connect.exemple.py  (+4 more)
app/ports/: embed_port.py  interpolated_port.py
docs/: app.adapters.interpolate_powers.rst  app.adapters.rst  app.core.logger.rst  app.core.models.rst  conf.py  index.rst
src/config/: config.py
tests/: conftest.py
tests/data/: connect.json  connect.py  data_set_test.csv  reponse_play2_for_test.json  reponse_viewguild_for_test.json
tests/integration/: test_assign_when_clash_begin.py  test_build_clash.py  test_connect.py  test_connection.py  test_info_clash_module.py  test_kuhn_munkres.py  test_play_2_data.py
tests/unit/: test_ab_module.py  test_b_module.py  test_bc_module.py  test_bombs_attacks.py  test_connect_user.py  test_date_time_fonctions.py  test_extract_data.py  test_get_guild.py  test_kuhn_munkres.py  test_linear_regression.py  test_mode_solo.py  test_multiregressor.py  test_polynomial.py  test_post_json.py  test_print_assign.py  test_utils.py
(+41 files in other folders)
