[tool.poetry]
name = "solgard-bot-last-refactoring"
version = "0.1.0"
description = ""
authors = ["AlexTraveylan <monsieurdemares@gmail.com>"]
readme = "README.md"
packages = [{include = "solgard_bot_last_refactoring"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
discord-py-interactions = "^5.8.0"
cryptography = "^41.0.3"
babel = "^2.12.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pytz = "^2023.3"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
discord-typings = "^0.6.0"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
